--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApp">
-        <activity android:name=".EventEditActivity"></activity>
-        <activity android:name=".WeekViewActivity"/>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivityLogin"
+            android:exported="false" />
+        <activity android:name=".EventEditActivity" />
+        <activity android:name=".WeekViewActivity" />
+        <activity
+            android:name=".MainActivity3"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +29,3 @@
     </application>
 
 </manifest>
-
-
-
-
-
