--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApp">
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity2"
             android:exported="false" />
-        <activity
+       <!-- <activity
             android:name=".MainActivityLogin"
-            android:exported="false" />
+            android:exported="false" />-->
         <activity android:name=".EventEditActivity" />
         <activity android:name=".WeekViewActivity" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".MainActivityLogin"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
