--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,16 @@
             android:name=".CustomPopMain"
             android:exported="false" />
         <activity
-            android:name=".Item"
+            android:name=".ExamPeriods"
             android:exported="false" />
         <activity
             android:name=".ListViewMain"
             android:exported="false" />
         <activity
-            android:name=".PaymentOfSemester"
+            android:name=".Menu"
             android:exported="false" />
         <activity
-            android:name=".MainActivityButton"
-            android:exported="false" />
-        <activity
-            android:name=".OnlyTest"
+            android:name=".StudentProfile"
             android:exported="false" />
         <!--
  <activity
@@ -34,7 +31,7 @@
         -->
         <activity android:name=".EventEditActivity" />
         <activity android:name=".WeekViewActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".CalendarActivity" />
         <activity
             android:name=".MainActivityLogin"
             android:exported="true">
