Implemented login with firebase authentication

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApp">
         <activity
+            android:name=".ReadData"
+            android:exported="false" />
+        <activity
             android:name=".NovemberPeriod"
             android:exported="false" />
         <activity
