--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".Test"
+            android:exported="false" />
+        <activity
             android:name=".NovemberPeriod"
             android:exported="false" />
         <activity
