--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity
             android:name=".StudentProfile"
             android:exported="false" />
+        <activity
+            android:name=".MensaMapsActivity"
+            android:exported="false" />
         <!--
  <activity
             android:name=".MainActivityLogin"
@@ -58,6 +61,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
     </application>
 
 </manifest>
