--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation  'com.google.firebase:firebase-database:20.2.2'
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
 
 
