--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
     namespace 'com.example.myapp'
     compileSdk 33
 
+
     defaultConfig {
         applicationId "com.example.myapp"
         minSdk 24
@@ -15,19 +16,34 @@ android {
         versionCode 1
         versionName "1.0"
 
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+
+
+
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
+
     }
+
+    buildFeatures{
+        dataBinding = true
+        viewBinding = true
+
+    }
+
 }
 
 dependencies {
@@ -50,8 +66,8 @@ dependencies {
 
 
 
-
 }
 task prepareKotlinBuildScriptModel {
 
 }
+
