--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -47,7 +48,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
-
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 
 
 
