--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
-
+    implementation 'joda-time:joda-time:2.12.5'
 
 }
 task prepareKotlinBuildScriptModel {
