--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ android {
     namespace 'com.example.myapp'
     compileSdk 33
 
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
+
 
     defaultConfig {
         applicationId "com.example.myapp"
@@ -58,6 +62,9 @@ dependencies {
     implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
     implementation 'joda-time:joda-time:2.12.5'
+    androidTestImplementation 'androidx.test:core:1.5.0'
+    androidTestImplementation 'androidx.test:core:1.5.0'
+
 
 }
 
